[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/Scripts/Personaje.gd" type="Script" id=1]
[ext_resource path="res://resources/Scripts/SpriteUP.gd" type="Script" id=2]
[ext_resource path="res://resources/Sprites/Down Part.png" type="Texture" id=3]
[ext_resource path="res://resources/Sprites/Upper Part.png" type="Texture" id=4]
[ext_resource path="res://resources/Scripts/Sprites.gd" type="Script" id=5]
[ext_resource path="res://resources/Scripts/SpriteDW.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 15 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22, 26 )

[node name="Personaje" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="HurtBox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="CloseCombat" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CloseCombat"]
position = Vector2( 9, -5 )
shape = SubResource( 2 )

[node name="Sprites" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="SpriteDW" type="Sprite" parent="Sprites"]
position = Vector2( -24, -15 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 11, 11, 48, 48 )
script = ExtResource( 6 )

[node name="SpriteUP" type="Sprite" parent="Sprites"]
light_mask = 2
position = Vector2( -19, -28 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 11, 11, 48, 48 )
script = ExtResource( 2 )
